--- a/app/src/main/res/layout/slide_welcome1.xml
+++ b/app/src/main/res/layout/slide_welcome1.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorWelcome1">
+    android:background="@color/colorWelcome1">-->
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/colorWelcome1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
@@ -38,4 +40,4 @@
             android:textAlignment="center"
             android:textColor="@color/colorTextIcons"/>
     </LinearLayout>
-</RelativeLayout>
+<!--</RelativeLayout>-->
