--- a/app/src/main/res/layout/content_new_expense.xml
+++ b/app/src/main/res/layout/content_new_expense.xml
@@ -16,20 +16,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-<!--        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_new_expense_date"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:hint="@string/date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>-->
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
 
         <include layout="@layout/til_date"
             android:layout_width="0dp"
@@ -52,20 +40,6 @@
 
     <include layout="@layout/til_odometer" />
 
-<!--    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_expense_odometer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="number"
-            android:maxLines="1"
-            android:maxLength="16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/odometer"/>
-    </android.support.design.widget.TextInputLayout>-->
-
     <TextView
         android:id="@+id/tv_new_expense_current_odometer"
         android:layout_gravity="center_horizontal"
@@ -78,18 +52,6 @@
         android:popupBackground="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-  <!--  <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_expense_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <AutoCompleteTextView
-            android:id="@+id/actv_new_expense_type"
-            android:hint="@string/expense_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>-->
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_new_expense_price"
@@ -106,19 +68,5 @@
     </android.support.design.widget.TextInputLayout>
 
     <include layout="@layout/til_note" />
-
-<!--    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_expense_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="textMultiLine"
-            android:maxLines="16"
-            android:maxLength="256"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/notes"/>
-    </android.support.design.widget.TextInputLayout>-->
 </LinearLayout>
 
