--- a/app/src/main/res/layout/content_new_insurance.xml
+++ b/app/src/main/res/layout/content_new_insurance.xml
@@ -16,20 +16,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!--<android.support.design.widget.TextInputLayout
-            android:id="@+id/til_new_insurance_date"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:hint="@string/date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>-->
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
 
         <include layout="@layout/til_date"
             android:layout_height="wrap_content"
@@ -53,7 +41,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_insurance_expiration_date"
@@ -81,20 +70,6 @@
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
-
-<!--    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_insurance_odometer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="number"
-            android:maxLines="1"
-            android:maxLength="16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/odometer"/>
-    </android.support.design.widget.TextInputLayout>-->
 
     <include layout="@layout/til_odometer"/>
 
@@ -125,7 +100,7 @@
             android:background="@null"
             android:src="@drawable/ic_add_circle_outline_black_24dp"
             android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_height="24dp"/>
     </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -143,17 +118,4 @@
     </android.support.design.widget.TextInputLayout>
 
     <include layout="@layout/til_note"/>
-<!--    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_insurance_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="textMultiLine"
-            android:maxLines="16"
-            android:maxLength="256"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/notes"/>
-    </android.support.design.widget.TextInputLayout>-->
 </LinearLayout>
