--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -16,25 +16,13 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
 
         <include layout="@layout/til_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
-
- <!--       <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_new_service_date"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:hint="@string/date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_time"
@@ -82,7 +70,8 @@
         android:id="@+id/ll_date_time_notification"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_notification_date"
@@ -112,20 +101,6 @@
     </LinearLayout>
 
     <include layout="@layout/til_odometer" />
-
-   <!-- <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_service_odometer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="number"
-            android:maxLines="1"
-            android:maxLength="16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/odometer"/>
-    </android.support.design.widget.TextInputLayout>-->
 
     <TextView
         android:id="@+id/tv_new_service_current_odometer"
@@ -165,18 +140,4 @@
     </android.support.design.widget.TextInputLayout>
 
     <include layout="@layout/til_note" />
-
-    <!--<android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_service_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="textMultiLine"
-            android:maxLines="16"
-            android:maxLength="256"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/notes"/>
-    </android.support.design.widget.TextInputLayout>-->
 </LinearLayout>
