--- a/app/src/main/res/layout/slide_welcome2.xml
+++ b/app/src/main/res/layout/slide_welcome2.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorWelcome2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
     
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
+        android:background="@color/colorWelcome2"
+        android:gravity="center"
         android:orientation="vertical">
         
         <ImageView
@@ -38,4 +36,3 @@
             android:paddingEnd="@dimen/text_padding"
             android:layout_marginTop="@dimen/activity_vertical_margin"/>
     </LinearLayout>
-</RelativeLayout>
