--- a/app/src/main/res/layout/dialog_new_fuel_tank.xml
+++ b/app/src/main/res/layout/dialog_new_fuel_tank.xml
@@ -27,6 +27,8 @@
         <android.support.design.widget.TextInputEditText
             android:hint="@string/capacity"
             android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
@@ -39,6 +41,8 @@
         <android.support.design.widget.TextInputEditText
             android:inputType="number"
             android:hint="@string/consumption"
+            android:maxLines="1"
+            android:maxLength="3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
