--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -21,7 +21,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Length unit: "/>
+        android:text="@string/length_unit"/>
 
     <Spinner
         android:id="@+id/spn_settings_length"
@@ -40,7 +40,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Currency unit: "/>
+        android:text="@string/currency_unit"/>
 
     <Spinner
         android:layout_toEndOf="@id/tv_settings_currency_unit"
@@ -62,6 +62,8 @@
         <android.support.design.widget.TextInputEditText
             android:hint="@string/reminder_distance_in_advance"
             android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
