--- a/app/src/main/res/layout/content_new_expense.xml
+++ b/app/src/main/res/layout/content_new_expense.xml
@@ -53,19 +53,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_expense_price"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="number"
-            android:maxLines="1"
-            android:maxLength="6"
+        <ImageView
+            android:src="@drawable/ic_monetization_black_24px"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_expense_price"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/price"/>
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:inputType="number"
+                android:maxLines="1"
+                android:maxLength="6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/price"/>
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
 
     <include layout="@layout/til_note" />
 </LinearLayout>
