--- a/app/src/main/res/layout/content_new_insurance.xml
+++ b/app/src/main/res/layout/content_new_insurance.xml
@@ -44,6 +44,12 @@
         android:layout_height="wrap_content"
         android:baselineAligned="false">
 
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_alarm_black_24dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_insurance_expiration_date"
             android:layout_width="0dp"
@@ -103,19 +109,29 @@
             android:layout_height="24dp"/>
     </LinearLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_insurance_price"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:inputType="number"
-            android:maxLines="1"
-            android:maxLength="8"
+        <ImageView
+            android:src="@drawable/ic_monetization_black_24px"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_insurance_price"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/price"/>
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="wrap_content">
 
+            <android.support.design.widget.TextInputEditText
+                android:inputType="number"
+                android:maxLines="1"
+                android:maxLength="8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/price"/>
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
     <include layout="@layout/til_note"/>
 </LinearLayout>
