--- a/app/src/main/res/layout/til_date.xml
+++ b/app/src/main/res/layout/til_date.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.TextInputLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/til_date">
-    <android.support.design.widget.TextInputEditText
-        android:focusable="false"
-        android:cursorVisible="false"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:src="@drawable/ic_calendar_black_24dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp" />
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</android.support.design.widget.TextInputLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/til_date">
+        <android.support.design.widget.TextInputEditText
+            android:focusable="false"
+            android:cursorVisible="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+</LinearLayout>
