--- a/app/src/main/res/layout/content_new_expense.xml
+++ b/app/src/main/res/layout/content_new_expense.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:maxLength="6"
                 android:layout_width="match_parent"
