--- a/app/src/main/res/layout/content_new_expense.xml
+++ b/app/src/main/res/layout/content_new_expense.xml
@@ -38,13 +38,34 @@
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
-    <include layout="@layout/til_odometer" />
+<!--    <LinearLayout
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_new_expense_current_odometer"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/btn_date"
+            android:drawableTop="@drawable/ic_calendar_black_24dp"
+            android:text="@string/date"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/btn_time"
+            android:drawableTop="@drawable/ic_alarm_black_24dp"
+            android:text="@string/time"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <ProgressBar
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+    </LinearLayout>-->
 
     <Spinner
         android:id="@+id/spn_new_expense_type"
@@ -53,7 +74,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <LinearLayout
+    <include layout="@layout/til_odometer" />
+
+    <TextView
+        android:id="@+id/tv_new_expense_current_odometer"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+<!--    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -62,13 +91,15 @@
         <ImageView
             android:src="@drawable/ic_monetization_black_24px"
             android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_height="24dp" />-->
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_expense_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
+                android:drawableLeft="@drawable/ic_monetization_black_24px"
+                android:drawablePadding="16dp"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:maxLength="6"
@@ -76,7 +107,6 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/price"/>
         </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
 
     <include layout="@layout/til_note" />
 </LinearLayout>
