--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -43,7 +43,7 @@
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+<!--
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:gravity="center_vertical"
@@ -53,14 +53,15 @@
         <ImageView
             android:src="@drawable/ic_swap_horiz_black_24dp"
             android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_height="24dp" />-->
         <ToggleButton
+            android:drawableLeft="@drawable/ic_swap_horiz_black_24dp"
+            android:drawablePadding="16dp"
             android:id="@+id/toggle_btn_new_service"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textOn="@string/by_date"
             android:textOff="@string/by_odometer"/>
-    </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -142,7 +143,7 @@
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout
+  <!--  <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -151,7 +152,7 @@
         <ImageView
             android:src="@drawable/ic_monetization_black_24px"
             android:layout_width="24dp"
-            android:layout_height="24dp" />
+            android:layout_height="24dp" />-->
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_price"
@@ -160,13 +161,14 @@
 
             <android.support.design.widget.TextInputEditText
                 android:inputType="number"
+                android:drawableLeft="@drawable/ic_monetization_black_24px"
+                android:drawablePadding="16dp"
                 android:maxLines="1"
                 android:maxLength="8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/price"/>
         </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
 
     <include layout="@layout/til_note" />
 </LinearLayout>
