--- a/app/src/main/res/layout/til_odometer.xml
+++ b/app/src/main/res/layout/til_odometer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<!--<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -8,7 +8,7 @@
     <ImageView
         android:src="@drawable/odometer"
         android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_height="24dp" />-->
     <android.support.design.widget.TextInputLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/til_odometer"
@@ -17,10 +17,11 @@
 
         <android.support.design.widget.TextInputEditText
             android:inputType="number"
+            android:drawableLeft="@drawable/ic_odometer"
+            android:drawablePadding="16dp"
             android:maxLines="1"
             android:maxLength="16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/odometer"/>
     </android.support.design.widget.TextInputLayout>
-</LinearLayout>
