--- a/app/src/main/res/layout/content_new_refueling.xml
+++ b/app/src/main/res/layout/content_new_refueling.xml
@@ -13,46 +13,40 @@
     tools:context="stoyanov.valentin.mycar.activities.NewRefuelingActivity"
     tools:showIn="@layout/activity_new_refueling">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false">
-
-        <include layout="@layout/til_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"/>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_new_refueling_time"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:hint="@string/time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
-
     <Spinner
         android:id="@+id/spn_new_refueling_fuel_tanks"
         android:popupBackground="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <include layout="@layout/til_odometer" />
-
-    <TextView
-        android:id="@+id/tv_new_refueling_current_odometer"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Switch
+            android:layout_gravity="center_vertical"
+            android:text="@string/full_fuel_tank"
+            android:id="@+id/switch_new_refueling_is_full"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_refueling_quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:hint="@string/quantity"
+                android:inputType="number"
+                android:maxLines="1"
+                android:maxLength="6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+ <!--   <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -81,7 +75,42 @@
             android:maxLength="6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>-->
+
+    <include layout="@layout/view_base"/>
+
+<!--    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false">
+
+        <include layout="@layout/til_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_refueling_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>-->
+
+   <!-- <include layout="@layout/til_odometer" />
+
+    <TextView
+        android:id="@+id/tv_new_refueling_current_odometer"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />-->
 
     <!--<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -95,7 +124,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp" />-->
 
-        <android.support.design.widget.TextInputLayout
+<!--        <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_refueling_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -111,5 +140,5 @@
                 android:hint="@string/price"/>
         </android.support.design.widget.TextInputLayout>
 
-    <include layout="@layout/til_note" />
+    <include layout="@layout/til_note" />-->
 </LinearLayout>
