--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -13,7 +13,27 @@
     tools:context="stoyanov.valentin.mycar.activities.NewServiceActivity"
     tools:showIn="@layout/activity_new_service">
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_service_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <AutoCompleteTextView
+            android:textSize="24sp"
+            android:id="@+id/actv_new_service_type"
+            android:popupBackground="@color/colorAccent"
+            android:inputType="textCapSentences|textAutoComplete"
+            android:completionThreshold="1"
+            android:maxLength="32"
+            android:maxLines="1"
+            android:hint="@string/service_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
+    <include layout="@layout/view_base"/>
+
+<!--    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,13 +56,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 
-    <TextView
+  <!--  <TextView
         android:text="@string/select_notification_method"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 <!--
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -54,7 +74,7 @@
             android:src="@drawable/ic_swap_horiz_black_24dp"
             android:layout_width="24dp"
             android:layout_height="24dp" />-->
-        <ToggleButton
+<!--        <ToggleButton
             android:drawableLeft="@drawable/ic_swap_horiz_black_24dp"
             android:drawablePadding="16dp"
             android:id="@+id/toggle_btn_new_service"
@@ -116,32 +136,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 
-    <include layout="@layout/til_odometer" />
+<!--    <include layout="@layout/til_odometer" />
 
     <TextView
         android:id="@+id/tv_new_service_current_odometer"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_new_service_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <AutoCompleteTextView
-            android:id="@+id/actv_new_service_type"
-            android:popupBackground="@color/colorAccent"
-            android:inputType="textCapSentences|textAutoComplete"
-            android:completionThreshold="1"
-            android:maxLength="32"
-            android:maxLines="1"
-            android:hint="@string/service_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
+        android:layout_height="wrap_content" />-->
 
   <!--  <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -154,7 +157,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp" />-->
 
-        <android.support.design.widget.TextInputLayout
+<!--        <android.support.design.widget.TextInputLayout
             android:id="@+id/til_new_service_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -170,5 +173,5 @@
                 android:hint="@string/price"/>
         </android.support.design.widget.TextInputLayout>
 
-    <include layout="@layout/til_note" />
+    <include layout="@layout/til_note" />-->
 </LinearLayout>
