--- a/app/src/main/res/layout/content_new_refueling.xml
+++ b/app/src/main/res/layout/content_new_refueling.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
