--- a/app/src/main/res/layout/content_new_refueling.xml
+++ b/app/src/main/res/layout/content_new_refueling.xml
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>-->
 
-    <include layout="@layout/view_base"/>
+    <include layout="@layout/new_item_base_view"/>
 
 <!--    <LinearLayout
         android:orientation="horizontal"
