--- a/app/src/main/res/layout/activity_new_vehicle.xml
+++ b/app/src/main/res/layout/activity_new_vehicle.xml
@@ -9,6 +9,14 @@
 
     <include layout="@layout/toolbar" />
 
+    <ProgressBar
+        android:id="@+id/pb_new_vehicle"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_gravity="top"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp" />
+
    <ScrollView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
