--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <include layout="@layout/view_base"/>
+    <include layout="@layout/new_item_base_view"/>
 
 <!--    <LinearLayout
         android:orientation="horizontal"
